Fix Accordion Panel overflow
This is intended as a temporary solution for: https://github.com/x3p0-dev/x3p0-ideas/issues/36

However, the hope is to remove it with a fix in Core/Gutenberg.

--- a/resources/scss/blocks/core/accordion.scss
+++ b/resources/scss/blocks/core/accordion.scss
@@ -16,6 +16,14 @@
 ///
 .wp-block-accordion-panel {
 	overflow-x: hidden;
+
+	// Fixes Core/Gutenberg bug. Need to double up on selector.
+	//
+	// @link https://github.com/x3p0-dev/x3p0-ideas/issues/36
+	// @link https://github.com/WordPress/gutenberg/issues/73455
+	&#{&} {
+		min-width: revert;
+	}
 }
 
 // -----------------------------------------------------------------------------
